# beekeeper

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  release-plz.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
.omc/state/: agent-replay-12f05437-a3c3-4a6b-8db6-228f903a8dc8.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
benches/: perf.rs
docs/: CONTRIBUTING.md  DEVELOPING.md
src/: atomic.rs  barrier.rs  boxed.rs  channel.rs  lib.rs  panic.rs  util.rs
src/bee/: context.rs  error.rs  mock.rs  mod.rs  queen.rs  worker.rs
src/bee/stock/: call.rs  echo.rs  mod.rs  thunk.rs
src/hive/: affinity.rs  batch.rs  builder.rs  channel.rs  condvar.rs  config.rs  context.rs  core.rs  cores.rs  counter.rs  delay.rs  error.rs  gate.rs  hive.rs  husk.rs  local.rs  mock.rs  mod.rs  outcome.rs  result.rs  sentinel.rs  shared.rs  spawn.rs  stored.rs  task.rs  thread.rs  util.rs  weighted.rs  workstealing.rs
src/hive/builder/: bee.rs  channel.rs  full.rs  mod.rs  open.rs  queue.rs  workstealing.rs
src/hive/inner/: builder.rs  config.rs  counter.rs  diagram.mmd  gate.rs  mod.rs  shared.rs  task.rs
src/hive/inner/queue/: channel.rs  closed.rs  delay.rs  mod.rs  retry.rs  status.rs  workstealing.rs
src/hive/outcome/: batch.rs  impl.rs  iter.rs  mod.rs  outcome.rs  queue.rs  store.rs
src/hive/queue/: delay.rs  global.rs  local.rs  mod.rs  null.rs
src/hive/scoped/: hive.rs
src/hive/task/: global.rs  iter.rs  local.rs  mod.rs
src/task/: context.rs  error.rs  mod.rs  queen.rs  ref_worker.rs  worker.rs
src/util/: call.rs  echo.rs  mod.rs  thunk.rs
