[package]
name = "beekeeper"
description = "A full-featured worker pool library for parallelizing tasks"
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
authors = ["John Didion <github@didion.net>"]
repository = "https://github.com/jdidion/beekeeper"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-deque = "0.8.6"
crossbeam-utils = "0.8.20"
num = "0.4.3"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
paste = "1.0.15"
thiserror = "1.0.63"
# required with the `affinity` feature
core_affinity = { version = "0.8.1", optional = true }
# required with the `batching` feature
crossbeam-queue = { version = "0.3.12", optional = true }
# alternate channel implementations that can be enabled with features
crossbeam-channel = { version = "0.5.13", optional = true }
flume = { version = "0.11.1", optional = true }
loole = { version = "0.4.0", optional = true }

[dev-dependencies]
divan = "0.1.17"
itertools = "0.14.0"
serial_test = "3.2.0"
#rstest = "0.22.0"
stacker = "0.1.17"

[[bench]]
name = "perf"
harness = false

[features]
default = ["batching", "retry"]
affinity = ["dep:core_affinity"]
batching = ["dep:crossbeam-queue"]
retry = []
crossbeam = ["dep:crossbeam-channel"]
flume = ["dep:flume"]
loole = ["dep:loole"]

[package.metadata.cargo-all-features]
allowlist = ["affinity", "batching", "retry"]

[profile.release]
lto = true
codegen-units = 1
